# etl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: base.py  const.py  datalake.py  extraction.py  log.py  transformation.py  utils.py
