[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asttokens==3.0.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "decorator==5.2.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "idna==3.10",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.7",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pip==23.2.1",
    "prompt-toolkit==3.0.51",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "requests==2.32.3",
    "setuptools==68.2.0",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "uv==0.6.16",
    "wcwidth==0.2.13",
    "wheel==0.41.2",
]
